ecell/pyecell/ecell/parser.out
reduce/reduce conflict in state 14 resolved using rule 11 (propertylist -> property .).
reduce/reduce conflict in state 22 resolved using rule 15 (property_entity_list -> property_entity .).


Unused terminals:

   control
   comment
   nl
   whitespace

Grammar

Rule 1     stmts -> stmt stmts
Rule 2     stmts -> stmt
Rule 3     stmt -> stepper_stmt
Rule 4     stmt -> system_stmt
Rule 5     stepper_stmt -> Stepper object_decl LBRACE propertylist RBRACE
Rule 6     system_stmt -> System object_decl LBRACE property_entity_list RBRACE
Rule 7     entity_other_stmt -> Variable object_decl LBRACE propertylist RBRACE
Rule 8     entity_other_stmt -> Process object_decl LBRACE propertylist RBRACE
Rule 9     object_decl -> name LPAREN name RPAREN
Rule 10    propertylist -> property propertylist
Rule 11    propertylist -> property
Rule 12    propertylist -> empty
Rule 13    property -> name valuelist SEMI
Rule 14    property_entity_list -> property_entity property_entity_list
Rule 15    property_entity_list -> property_entity
Rule 16    property_entity_list -> empty
Rule 17    property_entity -> property
Rule 18    property_entity -> entity_other_stmt
Rule 19    value -> LBRACKET valuelist RBRACKET
Rule 20    value -> quotedstring
Rule 21    value -> name
Rule 22    value -> number
Rule 23    valuelist -> value valuelist
Rule 24    valuelist -> value
Rule 25    empty -> <empty>

Terminals, with rules where they appear

LBRACE               : 5 6 7 8
LBRACKET             : 19
LPAREN               : 9
Process              : 8
RBRACE               : 5 6 7 8
RBRACKET             : 19
RPAREN               : 9
SEMI                 : 13
Stepper              : 5
System               : 6
Variable             : 7
comment              : 
control              : 
error                : 
name                 : 9 9 13 21
nl                   : 
number               : 22
quotedstring         : 20
whitespace           : 

Nonterminals, with rules where they appear

empty                : 12 16
entity_other_stmt    : 18
object_decl          : 5 6 7 8
property             : 10 11 17
property_entity      : 14 15
property_entity_list : 6 14
propertylist         : 5 7 8 10
stepper_stmt         : 3
stmt                 : 1 2
stmts                : 1 0
system_stmt          : 4
value                : 23 24
valuelist            : 13 19 23


Parsing method: SLR


state 0

    (0) S' -> . stmts
    (1) stmts -> . stmt stmts
    (2) stmts -> . stmt
    (3) stmt -> . stepper_stmt
    (4) stmt -> . system_stmt
    (5) stepper_stmt -> . Stepper object_decl LBRACE propertylist RBRACE
    (6) system_stmt -> . System object_decl LBRACE property_entity_list RBRACE

    Stepper         shift and go to state 2
    System          shift and go to state 3


    stepper_stmt    shift and go to state 5
    stmts           shift and go to state 1
    stmt            shift and go to state 4
    system_stmt     shift and go to state 6

state 1

    (0) S' -> stmts .




state 2

    (5) stepper_stmt -> Stepper . object_decl LBRACE propertylist RBRACE
    (9) object_decl -> . name LPAREN name RPAREN

    name            shift and go to state 8


    object_decl     shift and go to state 7

state 3

    (6) system_stmt -> System . object_decl LBRACE property_entity_list RBRACE
    (9) object_decl -> . name LPAREN name RPAREN

    name            shift and go to state 8


    object_decl     shift and go to state 9

state 4

    (1) stmts -> stmt . stmts
    (2) stmts -> stmt .
    (1) stmts -> . stmt stmts
    (2) stmts -> . stmt
    (3) stmt -> . stepper_stmt
    (4) stmt -> . system_stmt
    (5) stepper_stmt -> . Stepper object_decl LBRACE propertylist RBRACE
    (6) system_stmt -> . System object_decl LBRACE property_entity_list RBRACE

    $               reduce using rule 2 (stmts -> stmt .)
    Stepper         shift and go to state 2
    System          shift and go to state 3


    stepper_stmt    shift and go to state 5
    stmts           shift and go to state 10
    stmt            shift and go to state 4
    system_stmt     shift and go to state 6

state 5

    (3) stmt -> stepper_stmt .

    Stepper         reduce using rule 3 (stmt -> stepper_stmt .)
    System          reduce using rule 3 (stmt -> stepper_stmt .)
    $               reduce using rule 3 (stmt -> stepper_stmt .)



state 6

    (4) stmt -> system_stmt .

    Stepper         reduce using rule 4 (stmt -> system_stmt .)
    System          reduce using rule 4 (stmt -> system_stmt .)
    $               reduce using rule 4 (stmt -> system_stmt .)



state 7

    (5) stepper_stmt -> Stepper object_decl . LBRACE propertylist RBRACE

    LBRACE          shift and go to state 11



state 8

    (9) object_decl -> name . LPAREN name RPAREN

    LPAREN          shift and go to state 12



state 9

    (6) system_stmt -> System object_decl . LBRACE property_entity_list RBRACE

    LBRACE          shift and go to state 13



state 10

    (1) stmts -> stmt stmts .

    $               reduce using rule 1 (stmts -> stmt stmts .)



state 11

    (5) stepper_stmt -> Stepper object_decl LBRACE . propertylist RBRACE
    (10) propertylist -> . property propertylist
    (11) propertylist -> . property
    (12) propertylist -> . empty
    (13) property -> . name valuelist SEMI
    (25) empty -> .

    name            shift and go to state 17
    RBRACE          reduce using rule 25 (empty -> .)


    property        shift and go to state 14
    propertylist    shift and go to state 15
    empty           shift and go to state 16

state 12

    (9) object_decl -> name LPAREN . name RPAREN

    name            shift and go to state 18



state 13

    (6) system_stmt -> System object_decl LBRACE . property_entity_list RBRACE
    (14) property_entity_list -> . property_entity property_entity_list
    (15) property_entity_list -> . property_entity
    (16) property_entity_list -> . empty
    (17) property_entity -> . property
    (18) property_entity -> . entity_other_stmt
    (25) empty -> .
    (13) property -> . name valuelist SEMI
    (7) entity_other_stmt -> . Variable object_decl LBRACE propertylist RBRACE
    (8) entity_other_stmt -> . Process object_decl LBRACE propertylist RBRACE

    RBRACE          reduce using rule 25 (empty -> .)
    name            shift and go to state 17
    Variable        shift and go to state 23
    Process         shift and go to state 20


    property_entity shift and go to state 22
    property_entity_list shift and go to state 19
    entity_other_stmt shift and go to state 21
    property        shift and go to state 24
    empty           shift and go to state 25

state 14

    (10) propertylist -> property . propertylist
    (11) propertylist -> property .
    (10) propertylist -> . property propertylist
    (11) propertylist -> . property
    (12) propertylist -> . empty
    (13) property -> . name valuelist SEMI
    (25) empty -> .

  ! reduce/reduce conflict for RBRACE resolved using rule 11 (propertylist -> property .).
    RBRACE          reduce using rule 11 (propertylist -> property .)
    name            shift and go to state 17

  ! RBRACE          [ reduce using rule 25 (empty -> .) ]

    propertylist    shift and go to state 26
    property        shift and go to state 14
    empty           shift and go to state 16

state 15

    (5) stepper_stmt -> Stepper object_decl LBRACE propertylist . RBRACE

    RBRACE          shift and go to state 27



state 16

    (12) propertylist -> empty .

    RBRACE          reduce using rule 12 (propertylist -> empty .)



state 17

    (13) property -> name . valuelist SEMI
    (23) valuelist -> . value valuelist
    (24) valuelist -> . value
    (19) value -> . LBRACKET valuelist RBRACKET
    (20) value -> . quotedstring
    (21) value -> . name
    (22) value -> . number

    LBRACKET        shift and go to state 28
    quotedstring    shift and go to state 33
    name            shift and go to state 29
    number          shift and go to state 31


    value           shift and go to state 32
    valuelist       shift and go to state 30

state 18

    (9) object_decl -> name LPAREN name . RPAREN

    RPAREN          shift and go to state 34



state 19

    (6) system_stmt -> System object_decl LBRACE property_entity_list . RBRACE

    RBRACE          shift and go to state 35



state 20

    (8) entity_other_stmt -> Process . object_decl LBRACE propertylist RBRACE
    (9) object_decl -> . name LPAREN name RPAREN

    name            shift and go to state 8


    object_decl     shift and go to state 36

state 21

    (18) property_entity -> entity_other_stmt .

    name            reduce using rule 18 (property_entity -> entity_other_stmt .)
    Variable        reduce using rule 18 (property_entity -> entity_other_stmt .)
    Process         reduce using rule 18 (property_entity -> entity_other_stmt .)
    RBRACE          reduce using rule 18 (property_entity -> entity_other_stmt .)



state 22

    (14) property_entity_list -> property_entity . property_entity_list
    (15) property_entity_list -> property_entity .
    (14) property_entity_list -> . property_entity property_entity_list
    (15) property_entity_list -> . property_entity
    (16) property_entity_list -> . empty
    (17) property_entity -> . property
    (18) property_entity -> . entity_other_stmt
    (25) empty -> .
    (13) property -> . name valuelist SEMI
    (7) entity_other_stmt -> . Variable object_decl LBRACE propertylist RBRACE
    (8) entity_other_stmt -> . Process object_decl LBRACE propertylist RBRACE

  ! reduce/reduce conflict for RBRACE resolved using rule 15 (property_entity_list -> property_entity .).
    RBRACE          reduce using rule 15 (property_entity_list -> property_entity .)
    name            shift and go to state 17
    Variable        shift and go to state 23
    Process         shift and go to state 20

  ! RBRACE          [ reduce using rule 25 (empty -> .) ]

    property_entity shift and go to state 22
    entity_other_stmt shift and go to state 21
    property_entity_list shift and go to state 37
    property        shift and go to state 24
    empty           shift and go to state 25

state 23

    (7) entity_other_stmt -> Variable . object_decl LBRACE propertylist RBRACE
    (9) object_decl -> . name LPAREN name RPAREN

    name            shift and go to state 8


    object_decl     shift and go to state 38

state 24

    (17) property_entity -> property .

    name            reduce using rule 17 (property_entity -> property .)
    Variable        reduce using rule 17 (property_entity -> property .)
    Process         reduce using rule 17 (property_entity -> property .)
    RBRACE          reduce using rule 17 (property_entity -> property .)



state 25

    (16) property_entity_list -> empty .

    RBRACE          reduce using rule 16 (property_entity_list -> empty .)



state 26

    (10) propertylist -> property propertylist .

    RBRACE          reduce using rule 10 (propertylist -> property propertylist .)



state 27

    (5) stepper_stmt -> Stepper object_decl LBRACE propertylist RBRACE .

    Stepper         reduce using rule 5 (stepper_stmt -> Stepper object_decl LBRACE propertylist RBRACE .)
    System          reduce using rule 5 (stepper_stmt -> Stepper object_decl LBRACE propertylist RBRACE .)
    $               reduce using rule 5 (stepper_stmt -> Stepper object_decl LBRACE propertylist RBRACE .)



state 28

    (19) value -> LBRACKET . valuelist RBRACKET
    (23) valuelist -> . value valuelist
    (24) valuelist -> . value
    (19) value -> . LBRACKET valuelist RBRACKET
    (20) value -> . quotedstring
    (21) value -> . name
    (22) value -> . number

    LBRACKET        shift and go to state 28
    quotedstring    shift and go to state 33
    name            shift and go to state 29
    number          shift and go to state 31


    value           shift and go to state 32
    valuelist       shift and go to state 39

state 29

    (21) value -> name .

    LBRACKET        reduce using rule 21 (value -> name .)
    quotedstring    reduce using rule 21 (value -> name .)
    name            reduce using rule 21 (value -> name .)
    number          reduce using rule 21 (value -> name .)
    SEMI            reduce using rule 21 (value -> name .)
    RBRACKET        reduce using rule 21 (value -> name .)



state 30

    (13) property -> name valuelist . SEMI

    SEMI            shift and go to state 40



state 31

    (22) value -> number .

    LBRACKET        reduce using rule 22 (value -> number .)
    quotedstring    reduce using rule 22 (value -> number .)
    name            reduce using rule 22 (value -> number .)
    number          reduce using rule 22 (value -> number .)
    SEMI            reduce using rule 22 (value -> number .)
    RBRACKET        reduce using rule 22 (value -> number .)



state 32

    (23) valuelist -> value . valuelist
    (24) valuelist -> value .
    (23) valuelist -> . value valuelist
    (24) valuelist -> . value
    (19) value -> . LBRACKET valuelist RBRACKET
    (20) value -> . quotedstring
    (21) value -> . name
    (22) value -> . number

    SEMI            reduce using rule 24 (valuelist -> value .)
    RBRACKET        reduce using rule 24 (valuelist -> value .)
    LBRACKET        shift and go to state 28
    quotedstring    shift and go to state 33
    name            shift and go to state 29
    number          shift and go to state 31


    valuelist       shift and go to state 41
    value           shift and go to state 32

state 33

    (20) value -> quotedstring .

    LBRACKET        reduce using rule 20 (value -> quotedstring .)
    quotedstring    reduce using rule 20 (value -> quotedstring .)
    name            reduce using rule 20 (value -> quotedstring .)
    number          reduce using rule 20 (value -> quotedstring .)
    SEMI            reduce using rule 20 (value -> quotedstring .)
    RBRACKET        reduce using rule 20 (value -> quotedstring .)



state 34

    (9) object_decl -> name LPAREN name RPAREN .

    LBRACE          reduce using rule 9 (object_decl -> name LPAREN name RPAREN .)



state 35

    (6) system_stmt -> System object_decl LBRACE property_entity_list RBRACE .

    Stepper         reduce using rule 6 (system_stmt -> System object_decl LBRACE property_entity_list RBRACE .)
    System          reduce using rule 6 (system_stmt -> System object_decl LBRACE property_entity_list RBRACE .)
    $               reduce using rule 6 (system_stmt -> System object_decl LBRACE property_entity_list RBRACE .)



state 36

    (8) entity_other_stmt -> Process object_decl . LBRACE propertylist RBRACE

    LBRACE          shift and go to state 42



state 37

    (14) property_entity_list -> property_entity property_entity_list .

    RBRACE          reduce using rule 14 (property_entity_list -> property_entity property_entity_list .)



state 38

    (7) entity_other_stmt -> Variable object_decl . LBRACE propertylist RBRACE

    LBRACE          shift and go to state 43



state 39

    (19) value -> LBRACKET valuelist . RBRACKET

    RBRACKET        shift and go to state 44



state 40

    (13) property -> name valuelist SEMI .

    name            reduce using rule 13 (property -> name valuelist SEMI .)
    RBRACE          reduce using rule 13 (property -> name valuelist SEMI .)
    Variable        reduce using rule 13 (property -> name valuelist SEMI .)
    Process         reduce using rule 13 (property -> name valuelist SEMI .)



state 41

    (23) valuelist -> value valuelist .

    SEMI            reduce using rule 23 (valuelist -> value valuelist .)
    RBRACKET        reduce using rule 23 (valuelist -> value valuelist .)



state 42

    (8) entity_other_stmt -> Process object_decl LBRACE . propertylist RBRACE
    (10) propertylist -> . property propertylist
    (11) propertylist -> . property
    (12) propertylist -> . empty
    (13) property -> . name valuelist SEMI
    (25) empty -> .

    name            shift and go to state 17
    RBRACE          reduce using rule 25 (empty -> .)


    property        shift and go to state 14
    propertylist    shift and go to state 45
    empty           shift and go to state 16

state 43

    (7) entity_other_stmt -> Variable object_decl LBRACE . propertylist RBRACE
    (10) propertylist -> . property propertylist
    (11) propertylist -> . property
    (12) propertylist -> . empty
    (13) property -> . name valuelist SEMI
    (25) empty -> .

    name            shift and go to state 17
    RBRACE          reduce using rule 25 (empty -> .)


    property        shift and go to state 14
    propertylist    shift and go to state 46
    empty           shift and go to state 16

state 44

    (19) value -> LBRACKET valuelist RBRACKET .

    LBRACKET        reduce using rule 19 (value -> LBRACKET valuelist RBRACKET .)
    quotedstring    reduce using rule 19 (value -> LBRACKET valuelist RBRACKET .)
    name            reduce using rule 19 (value -> LBRACKET valuelist RBRACKET .)
    number          reduce using rule 19 (value -> LBRACKET valuelist RBRACKET .)
    SEMI            reduce using rule 19 (value -> LBRACKET valuelist RBRACKET .)
    RBRACKET        reduce using rule 19 (value -> LBRACKET valuelist RBRACKET .)



state 45

    (8) entity_other_stmt -> Process object_decl LBRACE propertylist . RBRACE

    RBRACE          shift and go to state 47



state 46

    (7) entity_other_stmt -> Variable object_decl LBRACE propertylist . RBRACE

    RBRACE          shift and go to state 48



state 47

    (8) entity_other_stmt -> Process object_decl LBRACE propertylist RBRACE .

    name            reduce using rule 8 (entity_other_stmt -> Process object_decl LBRACE propertylist RBRACE .)
    Variable        reduce using rule 8 (entity_other_stmt -> Process object_decl LBRACE propertylist RBRACE .)
    Process         reduce using rule 8 (entity_other_stmt -> Process object_decl LBRACE propertylist RBRACE .)
    RBRACE          reduce using rule 8 (entity_other_stmt -> Process object_decl LBRACE propertylist RBRACE .)



state 48

    (7) entity_other_stmt -> Variable object_decl LBRACE propertylist RBRACE .

    name            reduce using rule 7 (entity_other_stmt -> Variable object_decl LBRACE propertylist RBRACE .)
    Variable        reduce using rule 7 (entity_other_stmt -> Variable object_decl LBRACE propertylist RBRACE .)
    Process         reduce using rule 7 (entity_other_stmt -> Variable object_decl LBRACE propertylist RBRACE .)
    RBRACE          reduce using rule 7 (entity_other_stmt -> Variable object_decl LBRACE propertylist RBRACE .)


